Fix some layout issues

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -18,3 +18,15 @@ $mq-medium-max:  $mq-large-min - 1px;
 $mq-large-max:   $mq-xlarge-min - 1px;
 $mq-xlarge-max:  $mq-xxlarge-min - 1px;
 $mq-xxlarge-max: 5120px;
+
+
+// Mixins
+%unselectable {
+  -webkit-user-select: none; /* Chrome/Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+ */
+
+  /* Rules below not implemented in browsers yet */
+  -o-user-select: none;
+  user-select: none;
+}
